refactor: change SQL stats pagination