@@ -39,38 +39,18 @@ public class SqlStatsQueryService {
                 ? request.endDate().plusDays(1).atStartOfDay()
                 : LocalDateTime.now();
 
-        Sort sort = Sort.by(Sort.Direction.fromString(
-                request.direction() != null ? request.direction() : "DESC"
-        ), switch (request.orderBy() == null ? "elapsed" : request.orderBy()) {
-            case "avg" -> "avgElapsed";
-            case "wait" -> "waitTimeUsDelta";
-            case "execution" -> "executionsDelta";
-            case "buffer" -> "bufferUsDelta";
-            case "disk" -> "diskReadsDelta";
-            case "cpu" -> "cpuUsDelta";
+        // 정렬 방향 설정
+        Sort.Direction direction = Sort.Direction.fromString(request.direction() != null ? request.direction() : "DESC");
 
-            default -> null;
-        });
-
-        // 페이지네이션
-        Pageable pageable = PageRequest.of(
-                request.page() != null ? request.page() : 0,
-                request.size() != null ? request.size() : 10,
-                sort
-        );
-
-        // 기존 DB 조회
-        Page<Sql> result = sqlRepository.findFilteredSqlStats(
+        // 전체 데이터 조회 (페이지네이션 없이)
+        List<Sql> allSqls = sqlRepository.findAllForStats(
                 request.instanceId(),
-                request.keyword(),
                 start,
-                end,
-                pageable
+                end
         );
 
-        //  SQL TEXT 기준 그룹핑
-        Map<String, List<Sql>> grouped = result.getContent()
-                .stream()
+        // SQL TEXT 기준 그룹핑
+        Map<String, List<Sql>> grouped = allSqls.stream()
                 .collect(Collectors.groupingBy(Sql::getSqlText));
 
         // 그룹별 합산 / 평균 계산
@@ -106,16 +86,27 @@ public class SqlStatsQueryService {
                             cpuSum
                     );
                 })
-                .toList();
+                .collect(Collectors.toList());
 
-        // Page 로 다시 변환해서 반환
-        Page<SqlResponse> page = new PageImpl<>(
+        // 정렬 적용 (direction에 따라)
+        Comparator<SqlResponse> comparator = switch (direction) {
+            case ASC -> Comparator.comparing(SqlResponse::id);
+            case DESC -> Comparator.comparing(SqlResponse::id).reversed();
+        };
+        groupedList.sort(comparator);
+
+        // 전체 데이터 반환 (클라이언트 사이드 페이지네이션)
+        int total = groupedList.size();
+        
+        // Page 객체 생성 (전체 데이터를 content로 설정)
+        Pageable pageable = PageRequest.of(0, total > 0 ? total : 1);
+        Page<SqlResponse> pageResult = new PageImpl<>(
                 groupedList,
                 pageable,
-                groupedList.size()
+                total
         );
 
-        return SqlStatsPageResponse.from(page);
+        return SqlStatsPageResponse.from(pageResult);
     }
 
 
@@ -137,7 +128,7 @@ public class SqlStatsQueryService {
         // 1) 원본 DB 데이터 조회
         List<Sql> list = sqlRepository.findForGraph(
                 request.instanceId(),
-                request.keyword(),
+                request.filter(),
                 startAt,
                 endAt
         );
@@ -374,16 +365,10 @@ public class SqlStatsQueryService {
 
         // 기준 구간 SQL 조회
         SqlStatsQueryRequest baseReq = new SqlStatsQueryRequest(
-                req.instanceId(),     // instanceId
-                baseStart,            // startDate
-                baseEnd,              // endDate
-                req.keyword(),        // keyword
-                null,                 // minExecCount
-                null,                 // maxExecCount
-                "elapsed",            // orderBy
-                "DESC",               // direction
-                0,                    // page
-                100                   // size
+                req.instanceId(),
+                baseStart,
+                baseEnd,
+                "DESC"
         );
         SqlStatsPageResponse base = getSqlStats(baseReq);
 
@@ -393,13 +378,7 @@ public class SqlStatsQueryService {
                 req.instanceId(),
                 compStart,
                 compEnd,
-                req.keyword(),
-                null,
-                null,
-                "elapsed",
-                "DESC",
-                0,
-                100
+                "DESC"
         );
         SqlStatsPageResponse compare = getSqlStats(compareReq);
 
